--- a/public/model.html
+++ b/public/model.html
@@ -6,13 +6,9 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/model.js"></script>
 </head>
 <body>
-	<h1>Backbone Example</h1>
-	<ul>
-		<li><a href="./model.html">Model Example</a></li>
-		<li><a href="./collection.html">Collection Example</a></li>
-	</ul>
+	<h1>Backbone Model Example</h1>
 </body>
 </html>
