evetnまでのコードを反映

--- a/public/event.html
+++ b/public/event.html
@@ -6,9 +6,9 @@
   <script src="lib/js/json2.js"></script>
   <script src="lib/js/underscore.js"></script>
   <script src="lib/js/backbone.js"></script>
-  <script src="js/collection.js"></script>
+  <script src="js/event.js"></script>
 </head>
 <body>
-	<h1>Backbone Collection Example</h1>
+	<h1>Backbone Events Example</h1>
 </body>
 </html>
