--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Backbone Example</title>
-  <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+  <script src="lib/js/jquery-1.9.1.js"></script>
+  <script src="lib/js/json2.js"></script>
+  <script src="lib/js/underscore.js"></script>
+  <script src="lib/js/backbone.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
@@ -13,6 +13,7 @@
 	<ul>
 		<li><a href="./model.html">Model Example</a></li>
 		<li><a href="./collection.html">Collection Example</a></li>
+		<li><a href="./event.html">Events Example</a></li>
 	</ul>
 </body>
 </html>
