scriptタグの場所を変更

--- a/public/collection.html
+++ b/public/collection.html
@@ -10,5 +10,11 @@
 </head>
 <body>
 	<h1>Backbone Collection Example</h1>
+
+  <script src="lib/js/jquery-1.9.1.js"></script>
+  <script src="lib/js/json2.js"></script>
+  <script src="lib/js/underscore.js"></script>
+  <script src="lib/js/backbone.js"></script>
+  <script src="js/event.js"></script>
 </body>
 </html>
