--- a/public/collection.html
+++ b/public/collection.html
@@ -15,6 +15,6 @@
   <script src="lib/js/json2.js"></script>
   <script src="lib/js/underscore.js"></script>
   <script src="lib/js/backbone.js"></script>
-  <script src="js/event.js"></script>
+  <script src="js/collection.js"></script>
 </body>
 </html>
