--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 		<li><a href="./model.html">Model Example</a></li>
 		<li><a href="./collection.html">Collection Example</a></li>
 		<li><a href="./event.html">Events Example</a></li>
+    <li><a href="./view.html">View Example</a></li>
+    <li><a href="./app/">Router Example</a></li>
 	</ul>
 
   <script src="lib/js/jquery-1.9.1.js"></script>
