CoffeeScriptによるBackbone.jsアプリケーション開発

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 		<li><a href="./event.html">Events Example</a></li>
     <li><a href="./view.html">View Example</a></li>
     <li><a href="./app/">Router Example</a></li>
+    <li><a href="./appcs/">Backbone.js + CoffeeScript Example</a></li>
 	</ul>
 
   <script src="lib/js/jquery-1.9.1.js"></script>
