jQuery Mobileのサンプルを追加

--- a/public/jqm/index.html
+++ b/public/jqm/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html manifest="cache.manifest">
 <head>
   <title>Memo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div data-role="page" id="index">
+<div data-role="page" id="index" data-add-back-btn="false">
   <div data-role="header">
     <h1>Memo</h1>
     <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
@@ -18,38 +18,24 @@
 
   <div data-role="content">
     <ul id="memolist" data-role="listview" data-inset="true">
-      <li>
-        <a href="#view"></a>
-
-        <h2>Title</h2>
-
-        <p>jQuery Mobile</p>
-      </li>
-
-      <li>
-        <a href="#view"></a>
-
-        <h2>Title2</h2>
-
-        <p>jQuery Mobile</p>
-      </li>
+      <li><a><h2>Title</h2><p>Content</p></a></li>
+      <li><a><h2>Title2</h2><p>Content2</p></a></li>
     </ul>
   </div>
 
-  <div data-role="footer" data-position="fixed" class="ui-bar">
+  <div data-role="footer" class="ui-bar" data-position="fixed">
     <a href="#info-dialog" data-icon="info" data-rel="dialog">About</a>
   </div>
 </div>
 
 <div data-role="page" id="add">
   <div data-role="header">
-    <a data-derection="reverse" data-icon="back" data-rel="back">Back</a>
     <h1>Memo Add</h1>
-    <a href="#add" data-icon="plus">Add</a>
+    <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
   </div>
 
   <div data-role="content">
-    <div  data-role="filedcontain">
+    <div data-role="filedcontain">
       <fieldset data-role="controlgroup">
         <legend>Memo</legend>
         <input type="text" id="add-title" placeholder="Title"/>
@@ -58,41 +44,40 @@
     </div>
   </div>
 
-  <div class="ui-bar" data-position="fixed" data-role="footer">
-    <a data-icon="check" href="#" id="save-addbtn">Save</a>
+  <div data-role="footer" class="ui-bar" data-position="fixed">
+    <a href="#" data-icon="check" id="save-addbtn">Save</a>
   </div>
 </div>
 
 <div data-role="page" id="view">
   <div data-role="header">
-    <a data-derection="reverse" data-icon="back" data-rel="back">Back</a>
     <h1>Memo View</h1>
-    <a data-icon="plus" href="#add">Add</a>
+    <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
   </div>
 
   <div data-role="content">
-    <div  data-role="filedcontain">
+    <div data-role="filedcontain">
       <h2 id="view-title"></h2>
+
       <p id="view-content"></p>
     </div>
   </div>
 
   <div class="ui-bar" data-position="fixed" data-role="footer" data-role=
       "controlgroup" data-type="horizontal">
-    <a data-icon="gear" data-transition="flip" href="#edit">Edit</a>
-    <a data-icon="delete" data-rel="dialog" href="#confirm-dialog">Delete</a>
+    <a href="#edit" data-icon="gear">Edit</a>
+    <a href="#confirm-dialog" data-icon="delete" data-rel="dialog">Delete</a>
   </div>
 </div>
 
 <div data-role="page" id="edit">
   <div data-role="header">
-    <a data-derection="reverse" data-icon="back" data-rel="back">Back</a>
     <h1>Memo Edit</h1>
-    <a data-icon="plus" href="#add">Add</a>
+    <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
   </div>
 
   <div data-role="content">
-    <div  data-role="filedcontain">
+    <div data-role="filedcontain">
       <fieldset data-role="controlgroup">
         <legend>Memo</legend>
         <input type="text" id="edit-title" placeholder="Title"/>
@@ -101,8 +86,8 @@
     </div>
   </div>
 
-  <div class="ui-bar" data-position="fixed" data-role="footer">
-    <a data-icon="check" href="#" id="save-editbtn">Save</a>
+  <div data-role="footer" class="ui-bar" data-position="fixed">
+    <a href="#" data-icon="check" id="save-editbtn">Save</a>
   </div>
 </div>
 
@@ -112,7 +97,8 @@
   </div>
 
   <div data-role="content">
-    <p id="message"></p><a data-role="button" href="#index">OK</a>
+    <p id="message"></p>
+    <a data-role="button" href="#index">OK</a>
   </div>
 </div>
 
@@ -123,7 +109,7 @@
 
   <div data-role="content">
     This is a RESTful Memo Application using Node.js, jQuery Mobile, MongoDB,
-    mongoose, express and jade.
+    mongoose and express.
   </div>
 </div>
 
@@ -134,10 +120,12 @@
 
   <div data-role="content">
     <p>Are you sure you want to delete the item?</p>
-    <a data-role="button" href="#" id="del-btn">Delete</a>
+    <a href="#" id="del-btn" data-role="button">Delete</a>
   </div>
 </div>
+
 <script src="../lib/js/jquery-1.9.1.js"></script>
+<script src="jqm-setting.js"></script>
 <script src="../lib/js/jquery.mobile-1.3.0.js"></script>
 <script src="app.js"></script>
 </body>
