--- a/public/jqmbb/index.html
+++ b/public/jqmbb/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div data-role="page" id="index">
+<div data-role="page" id="index" data-add-back-btn="false">
   <div data-role="header">
     <h1>Memo</h1>
     <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
@@ -27,9 +27,8 @@
 
 <div data-role="page" id="add">
   <div data-role="header">
-    <a data-derection="reverse" data-icon="back" data-rel="back">Back</a>
     <h1>Memo Add</h1>
-    <a href="#add" data-icon="plus">Add</a>
+    <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
   </div>
 
   <div data-role="content">
@@ -49,9 +48,8 @@
 
 <div data-role="page" id="view">
   <div data-role="header">
-    <a data-derection="reverse" data-icon="back" data-rel="back">Back</a>
     <h1>Memo View</h1>
-    <a href="#add" data-icon="plus">Add</a>
+    <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
   </div>
 
   <div data-role="content">
@@ -71,9 +69,8 @@
 
 <div data-role="page" id="edit">
   <div data-role="header">
-    <a data-derection="reverse" data-icon="back" data-rel="back">Back</a>
     <h1>Memo Edit</h1>
-    <a href="#add" data-icon="plus">Add</a>
+    <a href="#add" class="ui-btn-right" data-icon="plus">Add</a>
   </div>
 
   <div data-role="content">
@@ -102,32 +99,9 @@
   </div>
 </div>
 
-<div data-role="page" id="msg-dialog">
-  <div data-role="header">
-    <h1>Message</h1>
-  </div>
-
-  <div data-role="content">
-    <p id="message"></p>
-    <a data-role="button" href="#index">OK</a>
-  </div>
-</div>
-
-<div data-role="page" id="confirm-dialog">
-  <div data-role="header">
-    <h1>Confirm</h1>
-  </div>
-
-  <div data-role="content">
-    <p>Are you sure you want to delete the item?</p>
-    <a href="#" id="del-btn" data-role="button">Delete</a>
-  </div>
-</div>
-
 <script type="text/template" id="tmpl-itemview">
   <a class="view">
     <h2><%= title %></h2>
-
     <p><%= content %></p>
   </a>
 </script>
