backbone.js 1.0.0 に version up

--- a/public/collection.html
+++ b/public/collection.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
+  <meta charset="utf-8">
   <title>Backbone Example</title>
 </head>
 <body>
 <h1>Backbone Collection Example</h1>
+<p>consoleを開いて確認してください。</p>
 
 <script src="lib/js/jquery-1.9.1.js"></script>
 <script src="lib/js/json2.js"></script>
