--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
+  <meta charset="utf-8">
   <title>Backbone Example</title>
 </head>
 <body>
 <h1>Backbone Example</h1>
+<p>consoleを開いて確認してください。</p>
 <ul>
   <li><a href="./model.html">Model Example</a></li>
   <li><a href="./collection.html">Collection Example</a></li>
@@ -12,6 +14,9 @@
   <li><a href="./view.html">View Example</a></li>
   <li><a href="./app/">Router Example</a></li>
   <li><a href="./appcs/">Backbone.js + CoffeeScript Example</a></li>
+  <li><a href="./appcache/">Backbone.js + Application Cache Example</a></li>
+  <li><a href="./jqm/">Memo App jQueryMobile version</a></li>
+  <li><a href="./jqmbb/">Memo App jQueryMobile + Backbone.js version</a></li>
 </ul>
 
 <script src="lib/js/jquery-1.9.1.js"></script>
